# old-school-layout

./: .crails  .gitignore  CMakeLists.txt  package.json  prebuild.sh  webpack.config.js
javascripts/: bitepoil.js  editor.js  index.js
javascripts/editor/: ckeditor_gallery.js  gallery.js  slider.js
src/: layout.cpp  layout.hpp  main.cpp  style.cpp  style.hpp
stylesheets/: _fonts.scss  _gallery.scss  _page-editor.scss  _reset.scss  _theme.scss  admin.scss  layout.scss
views/layouts/themes/: layout.html  old_school.html
